--- a/applications/springservice/templates/poddistruptionbudget.yaml
+++ b/applications/springservice/templates/poddistruptionbudget.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.podDistruptionBudget.minAvailable }}
+{{- if .Values.PodDisruptionBudget.minAvailable }}
 {{- if .Capabilities.APIVersions.Has "policy/v1" -}}
 apiVersion: policy/v1
 {{- else}}
@@ -8,7 +8,7 @@ kind: PodDisruptionBudget
 metadata:
   name: "{{ include "springservice.fullname" . }}-pdb"
 spec:
-  minAvailable: {{ .Values.podDistruptionBudget.minAvailable }}
+  minAvailable: {{ .Values.PodDisruptionBudget.minAvailable }}
   selector:
     matchLabels:
       app: "{{ include "springservice.fullname" . }}"
