--- a/applications/springservice/production/values.yaml
+++ b/applications/springservice/production/values.yaml
@@ -37,18 +37,12 @@ probe:
   readinessPath: /health
 
 ingress:
-  enabled: false
+  enabled: true
   ingresses:
     - name: springapp
       annotations:
       hosts:
-        - host: 10.50.0.10:8080
-          paths:
-            - "/"
-        - host: 10.50.0.11:8080
-          paths:
-            - "/"
-        - host: 10.50.0.12:8080
+        - host: springservice.com
           paths:
             - "/"
   tls: []
