--- a/applications/springservice/production/values.yaml
+++ b/applications/springservice/production/values.yaml
@@ -8,7 +8,8 @@ image:
   pullPolicy: Always
   tag: "latest"
 
-imagePullSecrets: []
+imagePullSecrets: regcred
+
 nameOverride: ""
 fullnameOverride: ""
 
