--- a/applications/springservice/production/values.yaml
+++ b/applications/springservice/production/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 2
 executeCommand: "java -jar /app/app.jar"
 
 image:
-  repository: hub.docker.com/repository/docker/alicanuzun/springboot
+  repository: alicanuzun/springservice
   pullPolicy: Always
   tag: "latest"
 
