--- a/applications/springservice/templates/PodDisruptionBudget.yaml
+++ b/applications/springservice/templates/PodDisruptionBudget.yaml
@@ -1,15 +1,12 @@
-{{- if .Values.PodDisruptionBudget.enabled }}
-{{- if .Capabilities.APIVersions.Has "policy/v1" -}}
+{{- if .Values.podDisruption.enabled }}
 apiVersion: policy/v1
-{{- else}}
-apiVersion: policy/v1beta1
-{{- end }}
 kind: PodDisruptionBudget
 metadata:
-  name: "{{ include "springservice.fullname" . }}-pdb"
+  name: springservice-pdb
+  namespace: production
 spec:
-  minAvailable: {{ .Values.PodDisruptionBudget.minAvailable }}
-  selector:
-    matchLabels:
-      app: "{{ include "springservice.fullname" . }}"
+  minAvailable: 2
+  selector:
+    matchLabels:
+      app: springservice
 {{- end }}
